tests/kyverno-policies/ingress-annotations/variables.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
policies:
- name: ingress-annotations
  resources:
    - name: paas-pass
    - name: paas-fail
    - name: skip
namespaceSelector:
  - name: webservice
  - name: paas
    labels:
      osc.edu/role: paas
